--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -19,12 +19,12 @@
                         {{ form.non_field_errors }}
                         <div style="margin-bottom: 25px" class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <input id="login-username" type="text" class="form-control" name="username" placeholder="Username" />
+                            {{ login_form.username }}
                         </div>
                         {{ form.username.errors }}
                         <div style="margin-bottom: 25px" class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                            <input id="login-username" type="password" class="form-control" name="password" placeholder="Password" />
+                            {{ login_form.password }}
                         </div>
                         {{ form.password.errors }}
                         <div style="margin-top:10px" class="form-group">
