--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -30,40 +30,32 @@
                             <form method="post" novalidate id="signupform" class="form-horizontal" role="form">{% csrf_token %}
 
                             {{ form.non_field_errors }}
-                            {% for field in form %}
-                            {% if field.name == 'username' %}
                             <div style="margin-bottom: 25px" class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                <input id="id_username" type="text" class="form-control" name="username" placeholder="Username" />
+                                {{ form.username }}
                             </div>
-                                {{ field.errors }}
-                            {% endif %}
-                            {% if field.name == 'password1' %}
+                                {{ form.username.errors }}
                             <div style="margin-bottom: 25px" class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                <input id="id_password1" type="password" class="form-control" name="password1" placeholder="Password" />
+                                {{ form.password1 }}
                             </div>
-                                {{ field.errors }}
-                            {% endif %}
-                            {% if field.name == 'password2' %}
+                                {{ form.password1.errors }}
                             <div style="margin-bottom: 25px" class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                <input id="id_password2" type="password" class="form-control" name="password2" placeholder="Password confirmation" />
+                                {{ form.password2 }}
                             </div>
-                                {{ field.errors }}
-                            {% endif %}
-                        {% endfor %}
+                                {{ form.password2.errors }}
 
                                 <div style="margin-top:10px" class="form-group">
                                 <!-- Button -->
-                        <div class="col-sm-12 controls">
-                            <button type="submit" class="save btn btn-info">Sign up</button>
+                                    <div class="col-sm-12 controls">
+                                        <button type="submit" class="save btn btn-info">Sign up</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
-                </form>
             </div>
-        </div>
     </div>
-</div>
 </div>
 {% endblock %}
